[package]
name = "paddle"
version = "0.1.0-beta.1"
authors = ["Jakob Meier <inbox@jakobmeier.ch>"]
edition = "2021"
rust-version = "1.65"
license = "MIT/Apache-2.0"
categories = ["game-engines", "game-development", "wasm", "web-programming"]
keywords = ["paddlers"]
readme = "README.md"
repository = "https://github.com/jakmeier/paddle"
description = "2D Game Engine for Rust on the Web"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
# nuts = { path = "../nuts", features = ["web-debug"] }
nuts = { version = "0.2.1", features = ["web-debug"] }
div = "0.4"
chrono = "0.4.23"
rand = "0.7"
serde = {version = "1.0", features = ["derive"] }
lyon = "1.0"
strum = "0.24"
strum_macros = "0.24"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1.7", optional = true }


[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "console",
    "DomRect",
    "Document",
    "Element",
    "FileReader",
    "Headers",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlImageElement",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Url",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "Window",
]

[features]
default = ["console_error_panic_hook", "html_helpers"]
nightly = []
const_fn = ["nightly"]
html_helpers = [
    "web-sys/HtmlInputElement",
    "web-sys/HtmlTextAreaElement",
]
