[workspace]

[package]
name = "example"
version = "0.1.0"
authors = ["Jakob Meier <mail@jakobmeier.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
paddle = { path = "../../" }
wasm-bindgen = "0.2.68"
