[workspace]

[package]
authors = ["Jakob Meier <mail@jakobmeier.ch>"]
edition = "2018"
name = "hello_world"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
paddle = {path = "../../"}
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.19"

[dependencies.web-sys]
features = [
  "Element",
  "HtmlTextAreaElement",
  "Window",
]
version = "0.3"
