[workspace]

[package]
authors = ["Jakob Meier <mail@jakobmeier.ch>"]
edition = "2018"
name = "paddle_example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = {version = "0.2", features = ["js"]}
lyon = "0.17"
paddle = {path = "../../"}
rand = "0.8"
wasm-bindgen = "0.2.68"
